# cam_calib

./: CMakeLists.txt  README.md  main.cpp
docs/formulae/: doc.tex
executable_testing/: CMakeLists.txt
executable_testing/checkerboard_camera_calibration/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  edge_error.h  intrinsic_solver.cpp  intrinsic_solver.h  vertex_camera.cpp  vertex_camera.h
